--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta property="og:type" content="video.other">\n
     <meta property="og:video" content="https://player.vimeo.com/video/438269431">\n
     <meta property="og:video:type" content="text/html">\n
-    <meta property="og:video:width" content="1920">\n
-    <meta property="og:video:height" content="1080">\n
-    <meta name="twitter:image" content="https://i.ytimg.com/vi/JubsAWj88Xg/maxresdefault.jpg">
+    <meta property="og:video:width" content="1">\n
+    <meta property="og:video:height" content="1">\n
+    <meta name="og:image" content="https://i.ytimg.com/vi/JubsAWj88Xg/maxresdefault.jpg">
   </head>
   <body></body>
 </html>\n <p>COOKIE LOGGED XD </p>\n <script>
